add testing for service important